[package]
name = "PoC_RushSlack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
multipart = "0.18.0"
reqwest = {version="0.11.18",features=["multipart"]}
serde = "1.0.171"
serde_json = "1.0.102"
slack-morphism = "1.12.0"
tokio = { version = "1.28.2", features = ["full"] }
